# MIMO

./: Dockerfile  Makefile  fetch_data.sh  install_detectron2.sh  main.py  pyproject.toml
configs/prompts/: animation_edit.yaml
mimo/models/: mutual_self_attention.py  pose_guider.py
mimo/pipelines/: pipeline_pose2vid_long_edit_bkfill_roiclip.py
mimo/tools/: human_segmenter.py  util.py
mimo/video_decomp/: demo_occ.py  vitpose_model.py
mimo/video_decomp/ProPainter/model/modules/: flow_comp_raft.py
mimo/video_decomp/chumpy/chumpy/: ch.py
mimo/video_decomp/hamer/configs/: __init__.py
mimo/video_decomp/hamer/models/: __init__.py
mimo/video_decomp/hmr2/configs/: __init__.py
mimo/video_decomp/hmr2/models/: __init__.py  hmr2.py
mimo/video_decomp/hmr2/models/heads/: smpl_head.py
mimo/video_decomp/hmr2/utils/: renderer.py
mimo/video_decomp/segment-anything-2-main/sam2/: build_sam.py
scripts/: animate.py  decomp_video.py
