[project]
name = "mimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate==0.33.0",
    "av==12.3.0",
    "controlnet-aux==0.0.7",
    "diffusers==0.24.0",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "huggingface-hub==0.25.0",
    "imageio[ffmpeg]>=2.37.0",
    "loguru>=0.7.3",
    "mlflow==2.9.2",
    "numpy==1.26.3",
    "omegaconf==2.3.0",
    "onnxruntime-gpu>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pyrender>=0.1.45",
    "pytorch-lightning>=2.5.2",
    "scikit-image>=0.25.2",
    "setuptools>=80.9.0",
    "smplx==0.1.28",
    "tensorflow==2.16.1",
    "timm>=1.0.19",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.42.4",
    "trimesh>=4.7.1",
    "tyro>=0.9.26",
    "webdataset>=1.0.2",
    "xformers>=0.0.26.post1",
    "yacs>=0.1.8",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
xformers = { index = "pytorch-cu121" }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
